# SearchEngineGui

./: .gitignore  CMakeLists.txt  Document.cpp  Document.h  DocumentIndex.cpp  DocumentIndex.h  DocumentParser.cpp  DocumentParser.h  README.md  SearchEngine.cpp  SearchEngine.h  SingletonStemmer.cpp  SingletonStemmer.h  Tests.cpp  WordIndex.cpp  WordIndex.h  main.cpp  porter2_stemmerWrapper.cpp  porter2_stemmerWrapper.h
lib/porter2_stemmer/: porter2_stemmer.h
